--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-webview": "13.12.5",
     "uuid": "^11.0.5",
     "zod": "^3.24.3",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
